--- a/_data/menu_items.yaml
+++ b/_data/menu_items.yaml
@@ -1,14 +1,14 @@
 - title: About
-  url: /
+  url: https://www.google.com/
 
 - title: ABND
-  url: /abnd/
+  url: https://www.google.com/
 
 - title: AND
-  url: /and/
+  url: https://www.google.com/
 
 - title: FEND
-  url: /fend/
+  url: https://www.google.com/
 
 - title: MWS
-  url: /mws/
+  url: https://www.google.com/
