--- a/_data/menu_items.yaml
+++ b/_data/menu_items.yaml
@@ -1,14 +1,14 @@
 - title: About
-  url: https://www.google.com/
+  url: ../../https://www.google.com/
 
 - title: ABND
-  url: https://www.google.com/
+  url: ../../https://www.google.com/
 
 - title: AND
-  url: https://www.google.com/
+  url: ../../https://www.google.com/
 
 - title: FEND
-  url: https://www.google.com/
+  url: ../../https://www.google.com/
 
 - title: MWS
-  url: https://www.google.com/
+  url: ../../https://www.google.com/
