--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ github_url: https://github.com/AndroidDevScholarship/ud851-emea/
 markdown: kramdown
 plugins:
   - jekyll-feed
+  - jekyll-redirect-from
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
