--- a/_data/abnd.yml
+++ b/_data/abnd.yml
@@ -1,6 +1,10 @@
+- title: foo
+  redirect_to:
+    - https://www.google.com/
+
 # Android Developer Projects
 #
-# Entry Example: 
+# Entry Example:
 #
 # - name: ProtoFitness
 #   banner: https://i.imgur.com/pu9Fjv5.jpg
@@ -25,7 +29,7 @@
 #     - title: Github
 #       icon: github
 #       url: https://github.com/myname/myapp
-#      
+#
 # v- Add new projects below this line -v
 - name: NewsReader
   banner: https://i.imgur.com/OV8xQfZ.jpg
@@ -37,9 +41,9 @@
       icon: youtube
       url: https://www.youtube.com/watch?v=e50ZY0AXcxQ
   description: |
-    An app for reading news(Guardian), with notifications and offline reading options. 
+    An app for reading news(Guardian), with notifications and offline reading options.
     User can choose which sections to follow and sort them, bookmark and share the articles s/he liked.
-    
+
   author: Oya Canli
   author_links:
     - title: GitHub
